<resources>
    <string name="app_name">Wanderlust1.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_mytrips">My Trips</string>
    <string name="title">Wanderlust</string>
    <string name="menu_my_trips">My Trips</string>
    <string name="title_trip">Trip</string>
    <string name="app_subtitle">your travel diary</string>
    <string name="start_button">My Trips</string>
    <string name="destination_label">Destination:</string>
    <string name="start_label">From:</string>
    <string name="end_label">To:</string>
    <string name="start_date">01.01.2018</string>
    <string name="end_date">01.12.2018</string>
    <string name="destination">The World</string>
    <string name="edit_trip_button">EDIT</string>
    <string name="new_entry_button">NEW ENTRY</string>
    <string name="name_label">Name:</string>
    <string name="create_button">CREATE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="new_trip_title">New Trip</string>
    <string name="new_entry_title">New Entry</string>
    <string name="new_entry_name_label">Name: </string>
    <string name="sort_by_label">sort by:</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_current_trip">Current Trip</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="sign_in_button">Log In</string>
    <string name="sign_up_button">Register</string>
    <string name="menu_logout">Log out</string>
    <string name="sign_up_link">New to Wanderlust? Register here</string>
    <string name="sign_in_link">Already got an account? Log in here</string>
</resources>
